Layman talk Ulrika Signopsis

--- a/signopsis.html
+++ b/signopsis.html
@@ -113,6 +113,8 @@
                 Galya explains her thesis research. She examined question sentences containing the word "who", and investigated how these sentences differ from each other and how people understand questions. <br>
 
                 Subtitles are in English.
+                <br>
+                <br>
               </p>
             </div>
             <div class="embed-responsive embed-responsive-16by9">
@@ -141,7 +143,26 @@
               </div>
           </div>
 
-        <!-- Column for healthcare -->
+        <!-- Column for Layman talk Ulrika PhD Defense -->
+        <div class="col-12 col-md mb-4 ml-md-5">
+          <div class="project-text pb-1 w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-5 ml-0" />
+            <h5>Layman talk PhD defense Ulrika</h5>
+            <p class="mb-6 mt-6">
+              This video shows the layman talk that Ulrika held at the start of her PhD defense in 2021. She tells more about her dissertation and offers a brief descriptive analysis of two sentences in NGT, so the audience can get a gist of writing a descriptive grammar. The video is in NGT with a voice-over in Dutch. <br>
+
+              Subtitles are in Dutch.
+            </p>
+          </div>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.youtube.com/embed/pGXMmFJ3-pQ?rel=0&amp;showinfo=0&amp;loop=1" title="Lekenpraatje verdediging 'A descriptive grammar of Sign Language of the Netherlands' in NGT en NLs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        </div>
+
+        <!-- Challenge Row third pair of Signopsis videos-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- Column for healthcare -->
         <div class="col-12 col-md mb-4 ml-md-5">
           <div class="project-text pb-1 w-100 text-left textDIV">
             <hr class="d-none d-lg-block mb-5 ml-0" />
@@ -156,10 +177,8 @@
             <iframe src="https://www.youtube.com/embed/fJ_1nuBdkNQ?rel=0&amp;showinfo=0&amp;loop=1" title="Exploring automatic text-to-sign translation in a healthcare setting" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
-        </div>
 
-        <!-- Challenge Row third pair of Signopsis videos-->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
         <!-- Column for Aspect in NGT -->
         <div class="col-12 col-md mb-4 ml-md-5">
           <div class="project-text pb-1 w-100 text-left textDIV">
@@ -168,13 +187,20 @@
             <p class="mb-6 mt-6">
               Cindy investigated the marking of three aspects in NGT. She finds interesting results, which she explains in this video. <br>
               Subtitles are in Dutch.
+              <br>
+              <br>
+              <br>
+              <br>
             </p>
           </div>
           <div class="embed-responsive embed-responsive-16by9 ">
             <iframe src="https://www.youtube.com/embed/_ddrURCuyvc?rel=0&amp;showinfo=0&amp;loop=1" title="Aspect in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
+        </div>
 
+        <!-- Challenge Row fourth pair of Signopsis videos-->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
         <!-- Column for Plural in NGT -->
         <div class="col-12 col-md mb-4 ml-md-5">
           <div class="project-text pb-1 w-100 text-left textDIV">
@@ -192,10 +218,8 @@
             <iframe src="https://www.youtube.com/embed/VwH_owVOa8k?rel=0&amp;showinfo=0&amp;loop=1" title="Plural in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
-        </div>
 
-        <!-- Challenge Row fourth pair of Signopsis videos-->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
       <!-- Column for conguence of verbs -->
       <div class="col-12 col-md mb-4 ml-md-5">
         <div class="project-text pb-1 w-100 text-left textDIV">
@@ -211,8 +235,12 @@
           <iframe src="https://www.youtube.com/embed/ywHkFhNgyjU?rel=0&amp;showinfo=0&amp;loop=1" title="Congruence of verbs in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
+      </div>
 
-      <!-- Column for Psych verbs -->
+      <!-- Challenge Row fifth pair of Signopsis videos-->
+      <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+
+        <!-- Column for Psych verbs -->
       <div class="col-12 col-md mb-4 ml-md-5">
         <div class="project-text pb-1 w-100 text-left textDIV">
           <hr class="d-none d-lg-block mb-5 ml-0" />
@@ -227,10 +255,7 @@
           <iframe src="https://www.youtube.com/embed/n8liaJR2d8w?rel=0&amp;showinfo=0&amp;loop=1&texttrack=en" title="Psych verbs in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
-      </div>
 
-      <!-- Challenge Row fifth pair of Signopsis videos-->
-      <div class="row align-items-start no-gutters mb-4 mb-lg-5">
       <!-- Column for negation -->
       <div class="col-12 col-md mb-4 ml-md-5">
         <div class="project-text pb-1 w-100 text-left textDIV">
@@ -245,11 +270,6 @@
         <div class="embed-responsive embed-responsive-16by9">
           <iframe src="https://www.youtube.com/embed/0PuJ3cVBZZA?rel=0&amp;showinfo=0&amp;loop=1&texttrack=en" title="Negation in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-      </div>
-
-      <!-- Column for placeholder -->
-      <div class="col-12 col-md order-2 ml-md-5">
-        <!-- This is empty -->
       </div>
     </div>
     <!-- </div> -->
@@ -267,6 +287,12 @@
           <iframe src="https://www.youtube.com/embed/n8liaJR2d8w?rel=0&amp;showinfo=0&amp;loop=1" title="Psych verbs in NGT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div> -->
       <!-- </div> -->
+
+ <!-- Column for placeholder -->
+ <!-- <div class="col-12 col-md order-2 ml-md-5"> -->
+  <!-- This is empty -->
+<!-- </div> -->
+
     </div>
 
 
