--- a/signopsis.html
+++ b/signopsis.html
@@ -72,7 +72,8 @@
             <div class="project-text pb-1 w-100 text-left textDIV">
               <h3>Signopsis</h3>
               <p class="mb-6 mt-6">
-                <br> This page shows our <i>signopsis</i> videos, in which our researchers tell more about their work in Sign Language of the Netherlands (NGT).
+                <br> The <i>signopsis</i> videos below provide short summarizes
+                of some of our research projects, presented in Sign Language of the Netherlands (NGT).
               </p>
             </div>
           </div>
@@ -91,9 +92,11 @@
           <div class="col-12 col-md mb-4 ml-md-5">
             <div class="project-text pb-1 w-100 text-left textDIV">
               <hr class="d-none d-lg-block mb-5 ml-0" />
-              <h5>Pechakucha by Marloes</h5>
+              <h5>Pechakucha by Marloes Oomen</h5>
               <p class="mb-6 mt-6">
-                Marloes presents on her research into questions in NGT. The presentation is a pechakucha, during the opening of the academic year of UvA's Faculty of Humanities. <br>
+                Marloes presented her research on questions in NGT 
+                during the opening of the academic year 2024-2025 
+                of UvA's Faculty of Humanities. <br>
                 <br>
                  The presentation is in NGT with a voice-over in Dutch.
               </p>
