--- a/publications.html
+++ b/publications.html
@@ -219,8 +219,8 @@
                 <option value="inproceedings{">Conference papers</option>
                 <option value="incollection{">Book chapters</option>
                 <option value="phdthesis">PhD theses</option>
-                <option value="mastersthesis">MSc theses</option>
-                <option value="bachelorsthesis">BSc theses</option>
+                <option value="mastersthesis">Master theses</option>
+                <option value="bachelorsthesis">Bachelor theses</option>
                 <option value="manuscript/handout/slides/technical report/misc">Other</option>
               </select>
             </div>
