--- a/people.html
+++ b/people.html
@@ -178,6 +178,12 @@
              </h5>
              <p class="text-black-50 mb-1">
               <b>2024</b><br>
+              Esmée de Roo (BA Linguistics)<br>
+              Leticia Ribeiro Rossetti (BA Linguistics)<br>
+              Simone Liesveld (BA Linguistics)<br>
+              Rolland Levestone (BA Linguistics)<br>
+              Shane Gilchrist (MA Language & Society)<br>
+              Merel van Engelen (MA Linguistics)<br>
               Lisa Loy (rMA Linguistics)<br>
               Oline Ranum (MSc AI) <b>Winner Amsterdam AI Thesis Award</b><br>
               Elynn Weijland (MSc Logic)<br>
