--- a/media.html
+++ b/media.html
@@ -63,6 +63,36 @@
 <section class="projects-section bg-light fadeIn" id="Media">
     <div class="container-fluid">
 
+      <!-- Challenge Row Interpres-->
+      <div class="row align-items-start no-gutters mb-4 ">
+        <!-- Column for text -->
+        <div class="col-12 col-md order-2">
+
+          <div class="project-text pb-1 w-100 text-left textDIV">
+              <h5>What will AI mean for interpreters?</h5>
+              <p class="mb-4">
+                <b>Publisher:</b> <a href="https://www.nbtg.nl" target="_blank">NBTG (Interpres)</a><br>
+                <b>Medium:</b> Article<br>
+                <b>Language:</b> Dutch (written) <br>
+                <b>Date:</b> April 2025 <br>
+                <b>Link:</b> Download article <a href="https://www.signlab-amsterdam.nl/publications/Interpres_MRT-2025.pdf" target="_blank">here</a><br>
+          </div>
+        </div>
+
+        <!-- Column for picture -->
+        <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
+          <a href="https://www.signlab-amsterdam.nl/publications/Interpres_MRT-2025.pdf" target="_blank"><img src="images/interpres-2025-mrt.png" class="img-fluid" alt="Cover image."></a>
+        </div>
+
+      </div>
+
+      <!-- Challenge row block-->
+      <div class="row align-items-start no-gutters  mb-lg-5">
+        <div class="project-text  w-100 text-left textDIV">
+          <hr class="d-none d-lg-block mb-0 ml-0" />
+        </div>
+      </div>
+
       <!-- Challenge Row DeafWire-->
       <div class="row align-items-start no-gutters mb-4 ">
         <!-- Column for text -->
