test iframe linkedin post ZinInNGT

--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
           <!-- Column for picture -->
 
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+
+            <!-- Temporary section for embedded linkedin post -->
+            <div class="embed-responsive embed-responsive-16by9 mb-5">
+              <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?compact=1" title="ZinInNGT post" height="399" width="504" frameborder="0" allowfullscreen=""></iframe>
+              <!-- <iframe src="https://www.youtube.com/embed/6FfPrcuE8gQ?rel=0&autoplay=1&playlist=6FfPrcuE8gQ&loop=1" title="SignLab Avatar Welcome" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            </div> 
             
             <div class="embed-responsive embed-responsive-16by9 mb-5">
               <iframe src="https://www.youtube.com/embed/6FfPrcuE8gQ?rel=0&autoplay=1&playlist=6FfPrcuE8gQ&loop=1" title="SignLab Avatar Welcome" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
