Update media ZinInNGT test

--- a/media.html
+++ b/media.html
@@ -92,6 +92,36 @@
           <hr class="d-none d-lg-block mb-0 ml-0" />
         </div>
       </div>
+      
+      <!-- Challenge Row ZinInNGT-->
+      <div class="row align-items-start no-gutters mb-4 ">
+        <!-- Column for text -->
+        <div class="col-12 col-md order-2">
+
+          <div class="project-text pb-1 w-100 text-left textDIV">
+              <h5>University of Amsterdam LinkedIn video about ZinInNGT</h5>
+              <p class="mb-4">
+                <b>Publisher:</b> <a href="https://www.linkedin.com/company/uva-humanities/posts/" target="_blank">University of Amsterdam</a><br>
+                <b>Medium:</b> Video<br>
+                <b>Language:</b> NGT (video with English subtitles) <br>
+                <b>Date:</b> April 2025 <br>
+                <b>Link:</b> View post <a href="https://www.linkedin.com/posts/uva-humanities_meer-dan-95-van-de-dove-en-slechthorende-ugcPost-7311295256765816832-fZLC/?utm_source=share&utm_medium=member_desktop&rcm=ACoAAALhqQUBFOiE4kgzgvJE-H9jOxGtEjYOni4" target="_blank">here</a><br>
+          </div>
+        </div>
+
+        <!-- Column for picture -->
+        <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?collapsed=1" height="399" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+        </div>
+
+      </div>
+
+      <!-- Challenge row block-->
+      <div class="row align-items-start no-gutters  mb-lg-5">
+        <div class="project-text  w-100 text-left textDIV">
+          <hr class="d-none d-lg-block mb-0 ml-0" />
+        </div>
+      </div>
 
       <!-- Challenge Row DeafWire-->
       <div class="row align-items-start no-gutters mb-4 ">
