--- a/media.html
+++ b/media.html
@@ -111,7 +111,7 @@
 
         <!-- Column for picture -->
         <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
-          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?collapsed=1" height="399" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?compact=1" title="ZinInNGT post" height="399" width="504" frameborder="0" allowfullscreen=""></iframe>
         </div>
 
       </div>
