Update index and MEdia

--- a/media.html
+++ b/media.html
@@ -110,9 +110,9 @@
         </div>
 
         <!-- Column for picture -->
-        <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF">
+        <div class="embed-responsive embed-responsive-16by9 mb-5">
           <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7311295256765816832?compact=1" title="ZinInNGT post" height="399" width="504" frameborder="0" allowfullscreen=""></iframe>
-        </div>
+        </div> 
 
       </div>
 
