--- a/people.html
+++ b/people.html
@@ -104,17 +104,17 @@
                       Postdocs and staff on ongoing projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://m-degano.github.io/" target="_blank">Marco Degano</a> (Project: Indefinites - Postdoc)<br>
                       <a href="https://www.uva.nl/en/profile/b/o/c.m.j.vanboven/c.m.j.van-boven.html" target="_blank">Cindy van Boven</a> (Project: Questions - Postdoc)<br>
-                      Lisa Gierman (Project: SignBank - Staff) <br>
-                      <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (Project: SignBank - Postdoc and Coordinator)<br>
-                      Ellen Nauta (Project: SignBank - Staff) <br>
-                      Gomèr Otterspeer (Project: SignBank - Technical staff) <br>
+                      Lisa Gierman (Project: Health - Guest staff) <br>                      
                       <a href="https://www.uva.nl/profiel/r/o/t.d.a.de-ronde/t.d.a.de-ronde.html" target="_blank">Tobias de Ronde</a> (Projects: Questions / Reference - Staff)<br>
                       <a href="https://www.illc.uva.nl/People/person/5645/Annika-Schiefner" target="_blank">Annika Schiefner</a> (Project: SignBeach - Postdoc)<br>
-                      <a href="https://www.illc.uva.nl/People/person/5342/Dr-Raquel-Veiga-Busto" target="_blank">Raquel Veiga Busto</a> (Project: Questions - Postdoc)<br>
-                      Dalene Venter (Project: SignBank - Staff) <br>
-                      Casper Wubbolts (Project: SignBank - Technical staff) <br>
+                    </p>
+                    <h5>
+                      Scientific programmers
+                    </h5>
+                    <p class="text-black-50 mb-3">
+                      <a href="https://www.illc.uva.nl/People/person/5621/Jari-Andersen" target="_blank">Jari Andersen</a><br>
+                      Gomèr Otterspeer <br>
                     </p>
                     <h5>
                       PhD candidates
@@ -126,24 +126,19 @@
                       <a href="https://www.illc.uva.nl/People/person/5642/Anna-Palmann" target="_blank">Anna Palmann</a> (Multimodal Communication)<br>
                       <a href="https://www.illc.uva.nl/People/PhDstudents/person/5480/Jos-Ritmeester" target="_blank">Jos Ritmeester</a> (Sign Language Learning)<br>
                     </p>
+
                     <h5>
-                      Scientific programmers
+                      Master and bachelor students with ongoing thesis projects
                     </h5>
                     <p class="text-black-50 mb-3">
-                      <a href="https://www.illc.uva.nl/People/person/5621/Jari-Andersen" target="_blank">Jari Andersen</a><br>
-                      <a href="https://olineranum.github.io/" target="_blank">Oline Ranum</a><br>
+                      Zhengdan Xia (MSc Information Studies)<br>
+                      Amina Izbassar (MSc AI)<br>
+                      Mabel Traube (BSc AI)<br>
                     </p>
                     <h5>
-                      <!-- Master and bachelor students with ongoing thesis projects
+                      Lab manager
                     </h5>
                     <p class="text-black-50 mb-3">
-
-                    </p> -->
-                    <h5>
-                      Lab managers
-                    </h5>
-                    <p class="text-black-50 mb-3">
-                      Ray Pelupessy <br>
                       Galya Stern <br>
                       <br>
                     </p>
@@ -160,9 +155,11 @@
             <p class="text-black-50 mb-3">
               <a href="https://www.uva.nl/profiel/a/b/e.o.aboh/e.o.aboh.html" target="_blank"> Enoch Aboh</a> (Professor Linguistics)<br>
               <a href="https://www.uva.nl/profiel/b/e/r.g.belleman/r.g.belleman.html" target="_blank">Rob Belleman</a> (Lecturer Computer Graphics and Visualization)<br>
+              <a href="https://m-degano.github.io/" target="_blank">Marco Degano</a> (Postdoc Semantics)<br>
               <a href="https://pietermanders.com/" target="_blank">Pieter Manders</a> (Lecturer Camera Techniques and Video Editing) <br>
               <a href="https://mariekeschouwstra.github.io/" target="_blank"> Marieke Schouwstra</a> (Assistant Professor Linguistics and AI)<br>
               <a href="https://ps.is.mpg.de/~dtzionas" target="_blank">Dimitrios Tzionas</a> (Assistant Professor Computer Vision and Graphics)<br>
+              <a href="https://sites.google.com/view/raquelveigabusto" target="_blank">Raquel Veiga Busto</a> (Assistant Professor URJC Madrid)<br>
             </p>
              <h5>
                PhD alumni
@@ -246,6 +243,19 @@
                Steven de Weille (2019)<br>
                Nardi Lam (2018)<br>
                Jetske Beks (2018)<br> -->
+             </p>
+            <h5>
+              Previous staff members
+            </h5>
+             <p class="text-black-50 mb-3">
+              <a href="https://ulrikaklomp.com" target="_blank">Ulrika Klomp</a> (2023-2025)<br>
+              Ellen Nauta (2023-2025)<br>
+              Ray Pelupessy (2023-2024)<br>
+              <a href="https://olineranum.github.io/" target="_blank">Oline Ranum</a> (2024-2025)<br>
+              <a href="https://sites.google.com/view/raquelveigabusto" target="_blank">Raquel Veiga Busto</a> (2022-2025)<br>
+              Dalene Venter (2023-2025) <br>
+              Casper Wubbolts (2023-2025) <br>
+              Johan Ros (2024-2025) <br>
              </p>
 
         </div>
