--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               <p class="mb-6 mt-6">
                 Bij deze derde editie van de <b>SignLab Open Avond</b>, op donderdag <b>19 juni 2025</b>, vertellen dove en horende onderzoekers van de Universiteit van Amsterdam, de University of Central Lancashire en de University of Birmingham in een aantal korte presentaties waar zij de afgelopen tijd mee bezig zijn geweest en wat ze hebben ontdekt. Onderwerpen die aan bod komen zijn onder andere het gebruik van de ruimte om naar mensen, dieren en dingen te verwijzen in NGT, de toepassing van augmented reality voor tolken op afstand, en de invloed van International Sign op gebarentalen. Zo zijn jullie straks weer helemaal op de hoogte van het gebarentaalonderzoek in Nederland en daarbuiten! Alle presentaties zullen worden gegeven in <u>NGT</u> of <u>International Sign</u>. Er zullen tolken aanwezig zijn die tussen deze talen en het gesproken Nederlands tolken. Er zijn ook schrijftolken.
 
-                De Open Avond vindt plaats in het <u>Auditorium van het Matrix Innovation Center</u> op Science Park (Science Park 301, Amsterdam). De inloop, met koffie en thee, is vanaf 18:30, <b>het programma start om 19:00</b>. Na afloop van het programma, rond 21:00, is er een borrel met hapjes tot 22:00. Iedereen is van harte welkom! Wil je erbij zijn? <u>Meld je dan aan vóór 13 juni</u> via <a href="https://bit.ly/SignLab2025">deze link</a>.
+                De Open Avond vindt plaats in het <u>Auditorium van het Matrix Innovation Center</u> op Science Park (Science Park 301, Amsterdam). De inloop, met koffie en thee, is vanaf 18:30, <b>het programma start om 19:00</b>. Na afloop van het programma, rond 21:00, is er een borrel met hapjes tot 22:00. De aanmelding is nu gesloten.
 
 
 
