update open avond info

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
             <!-- Tekst SignLab Open Avond -->
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <h5><b>Kom naar de SignLab Open Avond!</b></h5>
+              <h5><b>Kom naar de SignLab Open Avond! (Aanmelding inmiddels gesloten)</b></h5>
               <p class="mb-6 mt-6">
                 Bij deze derde editie van de <b>SignLab Open Avond</b>, op donderdag <b>19 juni 2025</b>, vertellen dove en horende onderzoekers van de Universiteit van Amsterdam, de University of Central Lancashire en de University of Birmingham in een aantal korte presentaties waar zij de afgelopen tijd mee bezig zijn geweest en wat ze hebben ontdekt. Onderwerpen die aan bod komen zijn onder andere het gebruik van de ruimte om naar mensen, dieren en dingen te verwijzen in NGT, de toepassing van augmented reality voor tolken op afstand, en de invloed van International Sign op gebarentalen. Zo zijn jullie straks weer helemaal op de hoogte van het gebarentaalonderzoek in Nederland en daarbuiten! Alle presentaties zullen worden gegeven in <u>NGT</u> of <u>International Sign</u>. Er zullen tolken aanwezig zijn die tussen deze talen en het gesproken Nederlands tolken. Er zijn ook schrijftolken.
 
