update order of people tab on mobile website

--- a/people.html
+++ b/people.html
@@ -74,7 +74,7 @@
 
 
             <!-- Column for team -->
-            <div class="col-12 col-md order-2">
+            <div class="col-12 col-md order-1">
                 <!-- Team -->
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
 
@@ -147,7 +147,7 @@
                 </div>
             </div>
 
-            <!-- Column for GIF -->
+            <!-- Column for team 2 -->
             <div class="col-12 col-md project-text order-md-12 text-left ml-md textDIV">
             <h5>
               Affiliate staff
