--- a/index.html
+++ b/index.html
@@ -191,20 +191,18 @@
 
           <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
 
-            <!-- Video SignLab Open Avond -->
+            <!-- Video SignLab Onderzoeksdag -->
             <div class="embed-responsive embed-responsive-16by9 mb-5">
-              <iframe src="https://www.youtube.com/embed/E61Bh3FhS-s?rel=0&autoplay=1&playlist=E61Bh3FhS-s&loop=1" title="SignLab Open Avond" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/jjNHJQwm-Tc?rel=0&autoplay=1&playlist=jjNHJQwm-Tc&loop=1" title="SignLab Open Avond" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div> 
 
-            <!-- Tekst SignLab Open Avond -->
+            <!-- Tekst SignLab Onderzoeksdag -->
             <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-              <h5><b>Kom naar de SignLab Open Avond! (Aanmelding inmiddels gesloten)</b></h5>
+              <h5><b>Doe mee aan de SignLab Onderzoeksdag!</b></h5>
               <p class="mb-6 mt-6">
-                Bij deze derde editie van de <b>SignLab Open Avond</b>, op donderdag <b>19 juni 2025</b>, vertellen dove en horende onderzoekers van de Universiteit van Amsterdam, de University of Central Lancashire en de University of Birmingham in een aantal korte presentaties waar zij de afgelopen tijd mee bezig zijn geweest en wat ze hebben ontdekt. Onderwerpen die aan bod komen zijn onder andere het gebruik van de ruimte om naar mensen, dieren en dingen te verwijzen in NGT, de toepassing van augmented reality voor tolken op afstand, en de invloed van International Sign op gebarentalen. Zo zijn jullie straks weer helemaal op de hoogte van het gebarentaalonderzoek in Nederland en daarbuiten! Alle presentaties zullen worden gegeven in <u>NGT</u> of <u>International Sign</u>. Er zullen tolken aanwezig zijn die tussen deze talen en het gesproken Nederlands tolken. Er zijn ook schrijftolken.
-
-                De Open Avond vindt plaats in het <u>Auditorium van het Matrix Innovation Center</u> op Science Park (Science Park 301, Amsterdam). De inloop, met koffie en thee, is vanaf 18:30, <b>het programma start om 19:00</b>. Na afloop van het programma, rond 21:00, is er een borrel met hapjes tot 22:00. De aanmelding is nu gesloten.
-
-
+                Meld je <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_7OQEch7ZKqGeaPk">hier</a> aan om deel te nemen aan één van de SignLab Onderzoeksdagen, op <b>dinsdag 9</b> of <b>zaterdag 13 september</b> 2025</b>! Tijdens de Onderzoeksdag doe je samen met anderen mee als deelnemer aan twee onderzoeksprojecten van SignLab Amsterdam. Dit duurt de hele dag, maar natuurlijk met genoeg pauzes. Wij zorgen ook voor een lekkere lunch! 
+ 
+                Je kunt aan de onderzoeksdag meedoen als je <b>dove NGT-gebaarder</b> bent. Als dank voor je deelname ontvang je bol.com-bonnen. Ook is er een reiskostenvergoeding. Klik op <a href="https://uva.fra1.qualtrics.com/jfe/form/SV_7OQEch7ZKqGeaPk">deze link</a> voor meer informatie en om je aan te melden.
 
                 <!-- Signlab is organizing another open evening on April 19, 2024. Are you coming? This evening 
                 we will talk about the research we are doing sign languages.
