--- a/research-applications.html
+++ b/research-applications.html
@@ -63,7 +63,7 @@
 <!-- Translate -->
 
 <section class="projects-section bg-light fadeIn" id="Applications">
-  <div class="container-fluid" id="disclaimerAvatar">
+  <div class="container-fluid">
 
         <!-- Application domains-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
