--- a/research-datasets.html
+++ b/research-datasets.html
@@ -66,57 +66,87 @@
 
     <div class="container-fluid">
 
+      <!-- Title -->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-
-          <!-- <div class="col-6 col-md order-2"> -->
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-
-                    <h2 class="section-heading mb-5">Datasets</h2>
-
-                    <h5>Global SignBank</h5>
-                    <p class="mb-4">
-                      Together with a team of developers at Radboud University in Nijmegen, we maintain and further develop the 
-                      <a href="https://signbank.cls.ru.nl/" target="_blank">Global Signbank</a> platform, 
-                      which hosts online lexicons for many sign languages around the world. 
-                      The platform was initially developed by Radboud University in Nijmegen. 
-                      Main responsibility was transferred to SignLab Amsterdam in 2023. 
-                    </p>
-
-                    <hr class="d-none d-lg-block mb-5 ml-0" />
-                    <h5>The NGT lexicon</h5>
-                    <p class="mb-4">
-                      We also maintain the 
-                      <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank">NGT lexicon</a>
-                      on Global Signbank, which was initially developed by Radboud University as well.
-                      We have added thousands of signs as well as detailed information 
-                      about the form of the signs (phonological transcriptions and motion capture recordings),
-                      their possible interpretations (multiple senses and links to the Open Multilingual Wordnet),
-                      and their usage (example sentences). We are still in the process of adding more signs and more information.
-                    </p>
-
-                    <hr class="d-none d-lg-block mb-5 ml-0" />
-                    <h5>Experimental data</h5>
-                    <p class="mb-4">  
-                      Besides this large, general-purpose dataset, we are also collecting experimental data on specific constructions in NGT 
-                      and other sign languages (French, Italian, German, Catalan, Turkish, Russian, and Filipino sign languages).
-                      We make these datasets available to the research community via our
-                      <a href="https://osf.io/rqcv7/" target="_blank">OSF repository</a>.
-                    </p>
-
-                    <hr class="d-none d-lg-block mb-5 ml-0" />
+                  <h2 class="section-heading mb-5">Datasets</h2>
                 </div>
             </div>
+        </div>
+
+        <!-- Global SignBank -->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+            <div class="col-12 col-md order-2">
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <h5>Global SignBank</h5>
+                  <p class="mb-4">
+                    Together with a team of developers at Radboud University in Nijmegen, we maintain and further develop the 
+                    <a href="https://signbank.cls.ru.nl/" target="_blank">Global Signbank</a> platform, 
+                    which hosts online lexicons for many sign languages around the world. 
+                    The platform was initially developed by Radboud University in Nijmegen. 
+                    Main responsibility was transferred to SignLab Amsterdam in 2023. 
+                  </p>
+              </div>
+            </div>
           <!-- Column for images -->
-          
           <div class="col-12 col-md-5 order-1 order-md-12 ml-md-5">
-                
-                  <div class="mb-5 mt-20">
-                    <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-                  </div>
-                  <div class="mb-5 mt-4">
-                    <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
-                  </div>
+            <div class="mb-5 mt-20">
+              <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank"><img src="images/signbank-screenshot.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters  mb-lg-5">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
+        <!-- The NGT lexicon -->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <div class="col-12 col-md order-2">
+            <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5>The NGT lexicon</h5>
+                <p class="mb-4">
+                  We also maintain the 
+                  <a href="https://signbank.cls.ru.nl/datasets/NGT" target="_blank">NGT lexicon</a>
+                  on Global Signbank, which was initially developed by Radboud University as well.
+                  We have added thousands of signs as well as detailed information 
+                  about the form of the signs (phonological transcriptions and motion capture recordings),
+                  their possible interpretations (multiple senses and links to the Open Multilingual Wordnet),
+                  and their usage (example sentences). We are still in the process of adding more signs and more information.
+                </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Challenge row block-->
+        <div class="row align-items-start no-gutters  mb-lg-5">
+          <div class="project-text  w-100 text-left textDIV">
+            <hr class="d-none d-lg-block mb-0 ml-0" />
+          </div>
+        </div>
+
+        <!-- Experimental data -->
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <div class="col-12 col-md order-2">
+              <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                <h5>Experimental data</h5>
+                <p class="mb-4">  
+                  Besides this large, general-purpose dataset, we are also collecting experimental data on specific constructions in NGT 
+                  and other sign languages (French, Italian, German, Catalan, Turkish, Russian, and Filipino sign languages).
+                  We make these datasets available to the research community via our
+                  <a href="https://osf.io/rqcv7/" target="_blank">OSF repository</a>.
+                </p>
+              </div>
+          </div>
+          <!-- Column for images -->
+          <div class="col-12 col-md-5 order-1 order-md-12 ml-md-5">
+            <div class="mb-5 mt-4">
+              <a href="https://osf.io/rqcv7/" target="_blank"><img src="images/osf-signlab.png" class="img-fluid" alt="Screenshot of the NGT lexicon on Global SignBank."></a>
+            </div>
           </div>
         </div>
 
