update research methods

--- a/research-methods.html
+++ b/research-methods.html
@@ -102,16 +102,17 @@
         </div>
 
         <!-- Challenge row block-->
-        <div class="row align-items-start no-gutters  mb-lg-5">
+        <!-- <div class="row align-items-start no-gutters  mb-lg-5">
           <div class="project-text  w-100 text-left textDIV">
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
-        </div>
+        </div> -->
 
         <!-- Data analysis methods -->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <hr class="d-none d-lg-block mb-0 ml-0" /><br/>
                     <h5>Data analysis methods</h5>
                     <p class="mb-4">
                       We use machine learning techniques (e.g., clustering) to analyse data obtained with motion capture equipment 
@@ -121,21 +122,29 @@
                       of non-manual elements in sign language data, and methods to 
                       <a href="https://aclanthology.org/2024.signlang-1.7/" target="_blank">assess the reliability</a> of such annotations.
                     </p>
+                    <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
                 </div>
-            </div>                                       
+            </div>
+            
+            <!-- Column for images -->
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+              <div class="mb-5">
+              </div>
+            </div>
         </div>
 
         <!-- Challenge row block-->
-        <div class="row align-items-start no-gutters  mb-lg-5">
+        <!-- <div class="row align-items-start no-gutters  mb-lg-5">
           <div class="project-text  w-100 text-left textDIV">
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
-        </div>
+        </div> -->
 
         <!-- Visualization methods -->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
+                  <hr class="d-none d-lg-block mb-0 ml-0" /><br/>
                     <h5>Visualization methods</h5>
                     <p class="mb-4">
                       Drawing on recent developments in computer graphics and animation (e.g., virtual humans)
