--- a/research-methods.html
+++ b/research-methods.html
@@ -112,7 +112,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-                  <hr class="d-none d-lg-block mb-0 ml-0" /><br/>
+                  <hr class="d-none d-lg-block mb-4 ml-0" />
                     <h5>Data analysis methods</h5>
                     <p class="mb-4">
                       We use machine learning techniques (e.g., clustering) to analyse data obtained with motion capture equipment 
@@ -144,7 +144,7 @@
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
             <div class="col-12 col-md order-2">
                 <div class="project-text pb-1 w-100 my-auto text-left no-top-padding textDIV">
-                  <hr class="d-none d-lg-block mb-0 ml-0" /><br/>
+                  <hr class="d-none d-lg-block mb-4 ml-0" />
                     <h5>Visualization methods</h5>
                     <p class="mb-4">
                       Drawing on recent developments in computer graphics and animation (e.g., virtual humans)
