--- a/research-overview.html
+++ b/research-overview.html
@@ -123,6 +123,12 @@
                   
                 </div>
             </div>
+
+            <!-- Column for images -->
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+              <div class="mb-5">
+              </div>
+            </div>
         </div>
 
         <!-- Five-year outlook -->
@@ -154,6 +160,11 @@
                 </div>
             </div>
           
+            <!-- Column for images -->
+            <div class="col-12 col-md-5 order-1 order-md-12 avatarGIF ml-md-5">
+              <div class="mb-5">
+              </div>
+            </div>
         </div>
     </div>
 
